--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.5.6",
+    "react-navigation-transitions": "^1.0.12",
     "styled-components": "^4.4.1"
   },
   "devDependencies": {
